--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,18 @@
-name: Android CI
+name: Android
 
-on:
-  push:
-    branches: [ master ]
+on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.2
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1.4.1
+      - uses: actions/checkout@master
+      - name: Set up JDK 8
+        uses: actions/setup-java@master
         with:
-          java-version: 1.8
+          java-version: 8
+          distribution: adopt
       - name: Build with Gradle
-        run: ./gradlew clean assembleDebug
+        run: |
+          chmod +x gradlew
+          ./gradlew clean assembleDebug
