Add support for Jetpack Compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
     buildFeatures {
         viewBinding = true
+        compose = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
     }
 }
 
@@ -39,4 +43,12 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'net.sf.extjwnl:extjwnl:2.0.5'
     implementation 'net.sf.extjwnl:extjwnl-data-wn31:1.2'
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 }
