--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext.kotlin_version = "1.6.10"
+    ext {
+        kotlin_version = '1.6.10'
+        compose_version = '1.1.1'
+    }
     repositories {
         google()
         mavenCentral()
