--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x gradlew
-          ./gradlew clean assembleDebug
+          ./gradlew clean assembleRelease
