--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,13 +6,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
+
       - name: Set up JDK 11
-        uses: actions/setup-java@master
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          distribution: adopt
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: wrapper
+          cache-read-only: ${{ github.ref != 'refs/heads/master' }}
+
       - name: Build with Gradle
-        run: |
-          chmod +x gradlew
-          ./gradlew clean assembleRelease
+        run: ./gradlew clean assembleRelease
