--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,11 @@
 buildscript {
-    ext {
-        kotlin_version = '1.6.10'
-        compose_version = '1.1.1'
-    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:8.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20"
     }
 }
 
